# daily_mevo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.dev.yml  docker-compose.yml  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  rollback.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_stations.py  002_create_snapshots.py  003_create_station_availability.py  004_create_agg_watermark.py  004_create_users.py  005_create_users.py  006_create_db_size_log.py  007_create_favourites.py  008_enable_rls_all_tables.py  009_enable_rls_alembic_version.py
app/: aggregation.py  config.py  db.py  logging.py  main.py  middleware.py  monitoring.py  retention.py
app/api/: __init__.py  favourites.py  geocode.py  models.py  stations.py
app/auth/: __init__.py  config.py  db.py  manager.py  models.py
app/collector/: __init__.py  gbfs_client.py  models.py  snapshot_collector.py  station_sync.py
context/: RUNNING_TESTS.md
context/deployment/: deploy-plan.md
context/foundation/: infra-antibias-research.md  infrastructure.md  lessons.md  prd.md  roadmap.md  shape-notes.md  tech-stack-v2.md  test-plan.md
e2e/: auth-session.spec.ts  favourites.spec.ts  heatmap-color-scale.spec.ts  seed.spec.ts  stations.spec.ts
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.test.json
scripts/: check.sh  run-related-tests.sh  verify_availability.py
tests/: conftest.py  test_aggregation.py  test_api_contract.py  test_auth.py  test_collector.py  test_collector_integration.py  test_current_slot.py  test_deployment_parity.py  test_favourites.py  test_gbfs_client.py  test_gbfs_contract.py  test_geocode.py  test_monitoring.py  test_retention.py  test_smoke.py  test_stations_api.py
(+159 files in other folders)
